# sat_to_ip_helpers

./: .gitignore  README.md  channels.txt  pipeline.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
channels_dvr/: client.py
channels_dvr/tests/: test_client.py
king_of_sat_scraper/: __init__.py  channel.py  client.py  scraper.py  transponder.py
king_of_sat_scraper/resources/: digital_devices_octopus_default_transponder_list.json
king_of_sat_scraper/scripts/: generate_transponders_list_for_digital_devices_octopus.py
king_of_sat_scraper/tests/: test_client.py  test_scraper.py
king_of_sat_scraper/tests/resources/: Astra 2E _ Astra 2F _ Astra 2G (28.2°E) - All transmissions - frequencies - KingOfSat.html
m3u/: GBR-1000193-DEFAULT_2025-04-19.json  README.md  channel_name_mappings.csv  channel_name_to_callsign_mappings.csv  enrich_m3u.py  enrichment.py  extract_callSign_stationId.py  uk_channel_gracenote.json
m3u/resources/: channel_name_to_callsign_mappings.csv
m3u/resources/channel_name_to_callsign_mappings/uk/: radio.csv  tv.csv
m3u/resources/gracenote_station_list/: GBR-1000193-DEFAULT_2026-03-10.json
m3u/scripts/: enrich_m3u.py
m3u/tests/: test_enrichment.py
octopus_api/: client.py  transponders.py
octopus_api/tests/: test_client.py  test_transponders.py
utils_pipeline/: __init__.py  channels.py  csv_mappings.py  dms.py  exceptions.py  scan.py
utils_pipeline/tests/: test_channels.py  test_csv_mappings.py  test_dms.py  test_scan.py
